creation component+routage

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,4 +18,7 @@
   </li>
 </ul>
 
+<a routerLink="/article" routerLinkActive="active">Article</a>
+<a routerLink="/commentaire" routerLinkActive="active">Commentaire</a>
+<a routerLink="/personne" routerLinkActive="active">Personne</a>
 <router-outlet></router-outlet>
