--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,20 @@
   </li>
 </ul>
 
+<p>
+  <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+    Link with href
+  </a>
+  <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+    Button with data-target
+  </button>
+</p>
+<div class="collapse" id="collapseExample">
+  <div class="card card-body">
+    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+  </div>
+</div>
+
 <a routerLink="/article" routerLinkActive="active">Article</a>
 <a routerLink="/commentaire" routerLinkActive="active">Commentaire</a>
 <a routerLink="/personne" routerLinkActive="active">Personne</a>
