creation component footer home login menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<!-- <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
   </h1>
@@ -30,9 +29,14 @@
   <div class="card card-body">
     Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
   </div>
+</div> -->
+<div style="border:5px solid green">
+  <p>Debug:
+  </p>
+  <a routerLink="/">Home</a>
+  <a routerLink="/article" routerLinkActive="active">Article</a>
+  <a routerLink="/commentaire" routerLinkActive="active">Commentaire</a>
+  <a routerLink="/personne" routerLinkActive="active">Personne</a>
 </div>
 
-<a routerLink="/article" routerLinkActive="active">Article</a>
-<a routerLink="/commentaire" routerLinkActive="active">Commentaire</a>
-<a routerLink="/personne" routerLinkActive="active">Personne</a>
 <router-outlet></router-outlet>
