--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,6 +37,7 @@
   <a routerLink="/article" routerLinkActive="active">Article</a>
   <a routerLink="/commentaire" routerLinkActive="active">Commentaire</a>
   <a routerLink="/personne" routerLinkActive="active">Personne</a>
+  <a routerLink="/login">Login</a>
 </div>
 
 <router-outlet></router-outlet>
