inscription+modif login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,6 +38,7 @@
   <a routerLink="/commentaire" routerLinkActive="active">Commentaire</a>
   <a routerLink="/personne" routerLinkActive="active">Personne</a>
   <a routerLink="/login">Login</a>
+  <a routerLink="/inscription">Inscription</a>
 </div>
 
 <router-outlet></router-outlet>
