--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,7 +33,7 @@
 <div style="border:5px solid green">
   <p>Debug:
   </p>
-  <a routerLink="/">Home</a>
+  <a routerLink="/">Accueil</a>
   <a routerLink="/article" routerLinkActive="active">Article</a>
   <a routerLink="/commentaire" routerLinkActive="active">Commentaire</a>
   <a routerLink="/personne" routerLinkActive="active">Personne</a>
@@ -41,4 +41,7 @@
   <a routerLink="/inscription">Inscription</a>
 </div>
 
+<app-menu></app-menu>
+<!-- <app-article></app-article> -->
 <router-outlet></router-outlet>
+<app-footer></app-footer>
