--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,8 @@
 <p>
   home works!
 </p>
+<!-- 
 <app-menu></app-menu>
-<!-- <router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
 <app-article></app-article>
-<app-footer></app-footer>
+<app-footer></app-footer> -->
