--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -1,3 +1,12 @@
 <p>
   article works!
 </p>
+<div class="row">
+
+  <div *ngFor="let a of articles ; let i = index">
+    {{a.titre}}
+  </div>
+
+
+
+</div>
