--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -11,6 +11,7 @@
       {{a.datePublication | date}}
       {{a.nbVue}}
       {{a.contenuArticle}}
+      <a routerLink="/articledetails/{{a.idArticle}}">Détails</a>
 
     </p>
   </div>
