--- a/src/app/gestionarticle/gestionarticle.component.html
+++ b/src/app/gestionarticle/gestionarticle.component.html
@@ -3,6 +3,9 @@
 </p>
 <div class="row">
 
+  <a routerLink="/ajoutarticle">Ajouter un nouvel article</a>
+
+  Mes articles publiés:
   <div *ngFor="let a of articles ; let i = index">
     <p>
       {{a.titre}}
