--- a/src/app/inscription/inscription.component.html
+++ b/src/app/inscription/inscription.component.html
@@ -21,7 +21,7 @@
       <input type="password" class="form-control" id="mdpConfirm" name="mdpConfirm" placeholder="Entrez à nouveau le mot de passe"
         [(ngModel)]="mdpConfirm" required>
 
-      <label for="newsletter">Abonnement à la newsletter</label>
+      <label for="selectNewsletter">Abonnement à la newsletter</label>
       <select name="selectNewsletter" [(ngModel)]="selectNewsletter" required>
         <option selected [ngValue]="0">Non</option>
         <option [ngValue]="1">Oui</option>
