--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -11,7 +11,7 @@
       {{a.datePublication | date}}
       {{a.nbVue}}
       {{a.contenuArticle}}
-      <a routerLink="/articledetails/{{a.idArticle}}">Détails</a>
+      <button class="btn btn-primary" routerLink="/articledetails/{{a.idArticle}}">Détails</button>
 
     </p>
   </div>
