--- a/src/app/gestionarticle/gestionarticle.component.html
+++ b/src/app/gestionarticle/gestionarticle.component.html
@@ -15,6 +15,8 @@
       {{a.nbVue}}
       {{a.contenuArticle}}
 
+      <button class="btn btn-primary" routerLink="/articlemodifier/{{a.idArticle}}">Modifier</button>
+
     </p>
   </div>
 
