--- a/src/app/gestionarticle/gestionarticle.component.html
+++ b/src/app/gestionarticle/gestionarticle.component.html
@@ -7,18 +7,57 @@
 
   Mes articles publiés:
   <div *ngFor="let a of articles ; let i = index">
-    <p>
-      {{a.titre}}
-      {{a.auteurArticle}}
-      {{a.tag}}
-      {{a.datePublication | date}}
-      {{a.nbVue}}
-      {{a.contenuArticle}}
 
-      <button class="btn btn-primary" routerLink="/articlemodifier/{{a.idArticle}}">Modifier</button>
+    {{a.titre}}
+    {{a.auteurArticle}}
+    {{a.tag}}
+    {{a.datePublication | date}}
+    {{a.nbVue}}
+    {{a.contenuArticle}}
 
-    </p>
+    <button class="btn btn-primary" routerLink="/articlemodifier/{{a.idArticle}}">Modifier</button>
+
+
+
+
+
+
+    <button (click)="supprimerArticle(a.idArticle)" type="button" class="btn btn-danger">Supprimer</button>
+
+    <!-- suppression d'un article par son auteur-->
+    <!-- Button trigger modal -->
+    <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter1">
+      Supprimer
+    </button> -->
+
+    <!-- Modal -->
+    <!-- <div class="modal fade" id="exampleModalCenter1" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle1"
+      aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title text-dark" id="exampleModalCenterTitle1">Confirmation de suppression</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body text-dark">
+            Etes-vous certain de vouloir supprimer l'article {{a.titre}} ?
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+            <button (click)="supprimerArticle(a.idArticle)" type="button" class="btn btn-primary">Supprimer</button>
+          </div>
+        </div>
+      </div>
+    </div> -->
+
+
+
+    
   </div>
+
+
 
 
 </div>
