--- a/src/app/inscription/inscription.component.html
+++ b/src/app/inscription/inscription.component.html
@@ -37,4 +37,8 @@
     Mot de passe ne correspond pas
   </div>
 
+  <div class="bg-warning" *ngIf="mailExistant == true">
+      L'adresse mail existe deja
+    </div>
+
 </div>
