--- a/src/app/inscription/inscription.component.html
+++ b/src/app/inscription/inscription.component.html
@@ -17,7 +17,7 @@
       <label for="mdp">Mot de passe: </label>
       <input type="password" class="form-control" id="mdp" name="mdp" placeholder="Entrez un mot de passe" [(ngModel)]="mdp"
         required>
-      <label for="mdpConfirm">Mot de passe: </label>
+      <label for="mdpConfirm">Confirmer le Mot de passe: </label>
       <input type="password" class="form-control" id="mdpConfirm" name="mdpConfirm" placeholder="Entrez à nouveau le mot de passe"
         [(ngModel)]="mdpConfirm" required>
 
