affichage articles par tags

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -38,19 +38,27 @@
           <a class="nav-link" href="#" (click)="logout()">Logout</a>
         </li>
       </span>
+      <span *ngIf="!auth.isLogged()">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/inscription">Inscription</a>
+        </li>
+      </span>
+      
 
-      <!--
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
-          Dropdown link
+          Catégories
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Action</a>
+          <!-- <a class="dropdown-item" href="#">Action</a>
           <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="#">Something else here</a> -->
+
+          <a *ngFor="let t of tags ; let i = index" class="dropdown-item" routerLink="/tag/{{t}}">{{t}}</a>
+
         </div>
-      </li> -->
+      </li> 
 
     </ul>
   </div>
