--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -1,4 +1,4 @@
-<p>
+<!-- <p>
   article works!
 </p>
 
@@ -6,6 +6,7 @@
 <div *ngFor="let a of articles ; let i = index">
   <div class="row">
     <p>
+
       {{a.titre}}
       {{a.auteurArticle}}
       {{a.tag}}
@@ -15,5 +16,44 @@
       <button class="btn btn-primary" routerLink="/articledetails/{{a.idArticle}}">Détails</button>
 
     </p>
+  </div>
+</div> -->
+
+
+<div class="container">
+
+
+
+  <div class="jumbotron p-3 p-md-5 text-white rounded bg-dark">
+    <div class="col-md-6 px-0">
+      <h1 class="display-4 font-italic">Title of a longer featured blog post</h1>
+      <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently
+        about what's most interesting in this post's contents.</p>
+      <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
+    </div>
+  </div>
+
+  <div class="row mb-2">
+
+    <div class="col-md-6" *ngFor="let a of articles ; let i = index">
+      <div class="card flex-md-row mb-4 shadow-sm h-md-250">
+        <div class="card-body d-flex flex-column align-items-start">
+          <strong class="d-inline-block mb-2 text-primary">{{a.tag}}</strong>
+          <h3 class="mb-0">
+            <a class="text-dark" routerLink="/articledetails/{{a.idArticle}}">{{a.titre}}</a>
+          </h3>
+          <div class="mb-1 text-muted">{{a.datePublication | date}}</div>
+          <p class="card-text mb-auto text-dark">{{a.contenuArticle}}</p>
+          <a routerLink="/articledetails/{{a.idArticle}}">En lire plus...</a>
+        </div>
+        <span *ngFor="let t of tags">
+          <span *ngIf="t == a.tag">
+              <img class="card-img-right rounded float-right" bind-attr.src="'assets/'+a.tag+'.jpg'" alt="Card image cap">
+          </span>
+        </span>
+        
+      </div>
+    </div>
+
   </div>
 </div>
