--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,11 @@
     Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
   </div>
 </div> -->
-<div style="border:5px solid green">
+
+
+
+
+<!-- <div style="border:5px solid green">
   <p>Debug:
   </p>
   <a routerLink="/">Accueil</a>
@@ -39,7 +43,7 @@
   <a routerLink="/personne" routerLinkActive="active">Personne</a>
   <a routerLink="/login">Login</a>
   <a routerLink="/inscription">Inscription</a>
-</div>
+</div> -->
 
 <app-menu></app-menu>
 <!-- <app-article></app-article> -->
