--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -24,18 +24,17 @@
 
 
 
-  <div class="jumbotron p-3 p-md-5 text-white rounded bg-dark">
+  <!-- <div class="jumbotron p-3 p-md-5 text-white rounded bg-dark">
     <div class="col-md-6 px-0">
-      <h1 class="display-4 font-italic">Title of a longer featured blog post</h1>
-      <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently
-        about what's most interesting in this post's contents.</p>
-      <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
+      <h1 class="display-4 font-italic">{{articles[articles.length-1].titre}}</h1>
+      <p class="lead my-3">{{articles[articles.length-1].contenuArticle}}</p>
+      <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">En lire plus...</a></p>
     </div>
-  </div>
+  </div> -->
 
   <div class="row mb-2">
 
-    <div class="col-md-6" *ngFor="let a of articles ; let i = index">
+    <div class="col-md-6" *ngFor="let a of articles | reverse">
       <div class="card flex-md-row mb-4 shadow-sm h-md-250">
         <div class="card-body d-flex flex-column align-items-start">
           <strong class="d-inline-block mb-2 text-primary">{{a.tag}}</strong>
