--- a/src/app/articlesbytag/articlesbytag.component.html
+++ b/src/app/articlesbytag/articlesbytag.component.html
@@ -1,4 +1,4 @@
-<p>
+<!-- <p>
   articlesbytag works!
 </p>
 <div *ngFor="let a of articles ; let i = index">
@@ -13,5 +13,28 @@
       <button class="btn btn-primary" routerLink="/articledetails/{{a.idArticle}}">Détails</button>
 
     </p>
+  </div>
+</div> -->
+
+<div class="container">
+
+
+  <div class="row mb-2">
+
+    <div class="col-md-6" *ngFor="let a of articles | reverse">
+      <div class="card flex-md-row mb-4 shadow-sm h-md-250">
+        <div class="card-body d-flex flex-column align-items-start">
+          <strong class="d-inline-block mb-2 text-primary">{{a.tag}}</strong>
+          <h3 class="mb-0">
+            <a class="text-dark" routerLink="/articledetails/{{a.idArticle}}">{{a.titre}}</a>
+          </h3>
+          <div class="mb-1 text-muted">{{a.datePublication | date}}</div>
+          <p class="card-text mb-auto text-dark">{{a.contenuArticle}}</p>
+          <a routerLink="/articledetails/{{a.idArticle}}">En lire plus...</a>
+        </div>
+        <img class="card-img-right rounded float-right" bind-attr.src="'assets/'+a.tag+'.jpg'" alt="Card image cap">
+      </div>
+    </div>
+
   </div>
 </div>
