--- a/src/app/gestionarticle/gestionarticle.component.html
+++ b/src/app/gestionarticle/gestionarticle.component.html
@@ -2,63 +2,71 @@
   gestionarticle works!
 </p>
 <div class="container">
+  <div class="row">
 
-</div>
-<div class="row">
+    <div class="col-md-2">
+      <a class="btn btn-info" routerLink="/ajoutarticle">Ajouter un nouvel article</a>
+    </div>
 
-  <div class="col-md-2">
-    <a class="btn btn-info" routerLink="/ajoutarticle">Ajouter un nouvel article</a>
-  </div>
-  <h2> Mes articles publiés:</h2>
+    <div class="col-md-8">
+      <h2> Mes articles publiés:</h2>
 
-  <div *ngFor="let a of articles ; let i = index">
+      <div *ngFor="let a of articles ; let i = index">
 
-    {{a.titre}}
-    {{a.auteurArticle}}
-    {{a.tag}}
-    {{a.datePublication | date}}
-    {{a.nbVue}}
-    {{a.contenuArticle}}
-
-    <button class="btn btn-primary" routerLink="/articlemodifier/{{a.idArticle}}">Modifier</button>
+        {{a.titre}}
+        {{a.auteurArticle}}
+        {{a.tag}}
+        {{a.datePublication | date}}
+        {{a.nbVue}}
+        {{a.contenuArticle}}
 
 
 
-    <!-- suppression d'un article par son auteur-->
-    <!-- Button trigger modal -->
-    <button type="button" class="btn btn-danger" data-toggle="modal" bind-attr.data-target="'#exampleModalCenter1'+a.idArticle">
-      Supprimer
-    </button>
+        <div class="col-md-4">
+          <button class="btn btn-primary" routerLink="/articlemodifier/{{a.idArticle}}">Modifier</button>
 
-    <!-- Modal -->
-    <div class="modal fade" bind-attr.id="'exampleModalCenter1'+a.idArticle" tabindex="-1" role="dialog"
-      bind-attr.aria-labelledby="'exampleModalCenterTitle1'+a.idArticle" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title text-dark" bind-attr.id="'exampleModalCenterTitle1'+a.idArticle">Confirmation de
-              suppression</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
+          <!-- suppression d'un article par son auteur-->
+          <!-- Button trigger modal -->
+          <button type="button" class="btn btn-danger" data-toggle="modal" bind-attr.data-target="'#exampleModalCenter1'+a.idArticle">
+            Supprimer
+          </button>
+
+          <!-- Modal -->
+          <div class="modal fade" bind-attr.id="'exampleModalCenter1'+a.idArticle" tabindex="-1" role="dialog"
+            bind-attr.aria-labelledby="'exampleModalCenterTitle1'+a.idArticle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title text-dark" bind-attr.id="'exampleModalCenterTitle1'+a.idArticle">Confirmation
+                    de
+                    suppression</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body text-dark">
+                  Etes-vous certain de vouloir supprimer l'article {{a.titre}} ?
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+                  <button (click)="supprimerArticle(a.idArticle)" type="button" class="btn btn-danger" data-dismiss="modal">Supprimer</button>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="modal-body text-dark">
-            Etes-vous certain de vouloir supprimer l'article {{a.titre}} ?
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
-            <button (click)="supprimerArticle(a.idArticle)" type="button" class="btn btn-danger" data-dismiss="modal">Supprimer</button>
-          </div>
+
         </div>
+
+
+
+
+
       </div>
     </div>
 
 
 
 
+
   </div>
-
-
-
-
 </div>
